# learning-vulkan

./: .clang-format  CMakeLists.txt  README.md
cmake/: dependencies.cmake  shaders.cmake
include/: app.hpp  device.hpp  engine.hpp  imgui.hpp  instance.hpp  logging.hpp  pipeline.hpp  scene.hpp  shaders.hpp  swapchain.hpp  utils.hpp
shaders/: basic.frag  basic.vert  particles.comp  shader.frag
source/: app.cpp  app.hpp  device.cpp  engine.cpp  imgui.cpp  instance.cpp  logging.cpp  main.cpp  pipeline.cpp  scene.cpp  shaders.cpp  swapchain.cpp  utils.cpp
source/engine/: device.cpp  device.hpp  engine.cpp  engine.hpp  essentials.hpp  image.cpp  image.hpp  imgui.cpp  imgui.hpp  instance.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  mesh.cpp  mesh.hpp  particle_system.cpp  particle_system.hpp  pipeline.cpp  pipeline.hpp  primitives.hpp  shaders.cpp  shaders.hpp  swapchain.cpp  swapchain.hpp  ui_overlay.cpp  ui_overlay.hpp  utils.cpp  utils.hpp
source/engine/core/: device.cpp  device.hpp  image.cpp  image.hpp  memory.cpp  memory.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  shaders.cpp  shaders.hpp  swapchain.cpp  swapchain.hpp
source/engine/utils/: fps_limiter.cpp  fps_limiter.hpp  logging.cpp  logging.hpp  mesh.cpp  mesh.hpp  primitives.hpp  transient.cpp  transient.hpp  utils.cpp  utils.hpp
